syntax = "proto3";

package com.github.hrozhek.signist.ml.detector;

service DetectorService {

  rpc detect (Image) returns (DetectionResult) {

  }
}

message Image {
  bytes data = 1;
}

message DetectionResult {

  Status status = 1;

  enum Status {
    SUCCESS = 0;
    FAILURE = 1;
  }
  //todo oneof
}